Chapter 9 — Listing 9.11: DatabaseInteraction.java Demonstrates: Correct java.time types for database persistence columns.